--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -92,8 +92,10 @@
     </SwiperTabItem>
 </SwiperTabItems>
 
-<FabTransition>
-    <MButton Color="black"
+@if (tabs == 0)
+{
+    <FabTransition>
+        <MButton Color="black"
              Class="mb-15 mb-sm-0"
              Dark
              Bottom
@@ -101,15 +103,40 @@
              Fixed
              Href="/Write"
              Fab>
-        <MIcon>
-            mdi-pencil
-        </MIcon>
-    </MButton>
-</FabTransition>
+            <MIcon>
+                mdi-pencil
+            </MIcon>
+        </MButton>
+    </FabTransition>
+}
+
+@if (tabs == 1)
+{
+    <FabTransition>
+        <MButton Color="black"
+             Class="mb-15 mb-sm-0"
+             Dark
+             Bottom
+             Right
+             Fixed
+             OnClick="()=>showAddTag=true"
+             Fab>
+            <MIcon>
+                mdi-plus
+            </MIcon>
+        </MButton>
+    </FabTransition>
+}
 
 <InputTag @bind-Value="showEditTag"
           @bind-Text="EditTagName"
           Title="重命名标签"
           OnSave="HandOnSaveEditTag">
+
+</InputTag>
+<InputTag @bind-Value="showAddTag"
+          @bind-Text="AddTagName"
+          Title="添加标签"
+          OnSave="HandOnSaveAddTag">
 
 </InputTag>
