--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -1,4 +1,5 @@
-﻿@page "/{tab?}"
+﻿@page "/"
+@page "/tab={tab:int}"
 
 <MAppBar App
          Elevation="0"
@@ -45,7 +46,7 @@
             {
                 <MCard Class="mb-5 tag-card"
                    Rounded="@("lg")">
-                    <MListItem OnClick="HandOnTagClick">
+                    <MListItem OnClick="HandOnTagClick" Ripple="false">
                         <MListItemIcon>
                             <MIcon>
                                 mdi-label-outline
