feat() : add ElevateOnScroll

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -1,9 +1,10 @@
 ﻿@page "/"
-@page "/tab={tab:int}"
+@page "/tab/{tab:int}"
 
 <MAppBar App
-         Elevation="0"
-         Color="white">
+         ElevateOnScroll
+         Color="white"
+         ScrollTarget="#scrolling-index">
     <MTabs @bind-Value="tabs"
            ActiveClass="text-h6 font-weight-bold"
            HideSlider
@@ -23,75 +24,77 @@
     </MButton>
 </MAppBar>
 
-<SwiperTabItems @bind-Value="tabs" RefreshData="HandOnRefreshData">
-    <SwiperTabItem>
-        <div class="mb-8 px-2">
-            <MSubheader Class="px-0">
-                @(DateTime.Now.ToString("yyyy/MM/dd") + " " + DateTime.Now.DayOfWeek.ToChinese2())
-            </MSubheader>
+<ScrollContainer Id="scrolling-index">
+    <SwiperTabItems @bind-Value="tabs" RefreshData="HandOnRefreshData">
+        <SwiperTabItem>
+            <div class="mb-8 px-2">
+                <MSubheader Class="px-0">
+                    @(DateTime.Now.ToString("yyyy/MM/dd") + " " + DateTime.Now.DayOfWeek.ToChinese2())
+                </MSubheader>
 
-            <h3>早上好，又是全新的一天</h3>
-        </div>
+                <h3>早上好，又是全新的一天</h3>
+            </div>
 
-        <DiaryCardList Value="Diaries">
+            <DiaryCardList Value="Diaries">
 
-        </DiaryCardList>
+            </DiaryCardList>
 
-        <div class="py-10">
-        </div>
-    </SwiperTabItem>
-    <SwiperTabItem>
-        <div class="d-flex justify-space-between flex-wrap">
-            @foreach (var item in Tags)
-            {
-                <MCard Class="mb-5 tag-card"
-                   Rounded="@("lg")">
-                    <MListItem OnClick="HandOnTagClick" Ripple="false">
-                        <MListItemIcon>
-                            <MIcon>
-                                mdi-label-outline
-                            </MIcon>
-                        </MListItemIcon>
+            <div class="py-10">
+            </div>
+        </SwiperTabItem>
+        <SwiperTabItem>
+            <div class="d-flex justify-space-between flex-wrap">
+                @foreach (var item in Tags)
+                {
+                    <MCard Class="mb-5 tag-card"
+                       Rounded="@("lg")">
+                        <MListItem OnClick="HandOnTagClick" Ripple="false">
+                            <MListItemIcon>
+                                <MIcon>
+                                    mdi-label-outline
+                                </MIcon>
+                            </MListItemIcon>
 
-                        <MListItemContent>
-                            @item.Name
-                        </MListItemContent>
+                            <MListItemContent>
+                                @item.Name
+                            </MListItemContent>
 
-                        <MListItemAction>
-                            <div @onclick:stopPropagation="true">
-                                <MMenu Rounded="@("lg")"
-                                   Bottom
-                                   Left
-                                   Transition="scroll-x-reverse-transition">
-                                    <ActivatorContent>
-                                        <MButton Icon
-                                             @attributes="@context.Attrs">
-                                            <MIcon>mdi-pencil</MIcon>
-                                        </MButton>
-                                    </ActivatorContent>
-                                    <ChildContent>
-                                        <MList MinWidth="150">
-                                            <MListItem Dense OnClick="()=>HandOnTagRename(item)">
-                                                <MListItemContent>
-                                                    重命名
-                                                </MListItemContent>
-                                            </MListItem>
-                                            <MListItem Dense OnClick="()=>HandOnTagDelete(item)">
-                                                <MListItemContent>
-                                                    删除
-                                                </MListItemContent>
-                                            </MListItem>
-                                        </MList>
-                                    </ChildContent>
-                                </MMenu>
-                            </div>
-                        </MListItemAction>
-                    </MListItem>
-                </MCard>
-            }
-        </div>
-    </SwiperTabItem>
-</SwiperTabItems>
+                            <MListItemAction>
+                                <div @onclick:stopPropagation="true">
+                                    <MMenu Rounded="@("lg")"
+                                       Bottom
+                                       Left
+                                       Transition="scroll-x-reverse-transition">
+                                        <ActivatorContent>
+                                            <MButton Icon
+                                                 @attributes="@context.Attrs">
+                                                <MIcon>mdi-pencil</MIcon>
+                                            </MButton>
+                                        </ActivatorContent>
+                                        <ChildContent>
+                                            <MList MinWidth="150">
+                                                <MListItem Dense OnClick="()=>HandOnTagRename(item)">
+                                                    <MListItemContent>
+                                                        重命名
+                                                    </MListItemContent>
+                                                </MListItem>
+                                                <MListItem Dense OnClick="()=>HandOnTagDelete(item)">
+                                                    <MListItemContent>
+                                                        删除
+                                                    </MListItemContent>
+                                                </MListItem>
+                                            </MList>
+                                        </ChildContent>
+                                    </MMenu>
+                                </div>
+                            </MListItemAction>
+                        </MListItem>
+                    </MCard>
+                }
+            </div>
+        </SwiperTabItem>
+    </SwiperTabItems>
+</ScrollContainer>
 
 @if (tabs == 0)
 {
