--- a/NoDecentDiary/Shared/ScrollContainer.razor
+++ b/NoDecentDiary/Shared/ScrollContainer.razor
@@ -1,13 +1,15 @@
-﻿<MSheet Id="Id"
-        Class="overflow-y-auto scroll-height">
-    <MContainer>
-        @ChildContent
-    </MContainer>
+﻿<MSheet Id="@Id"
+        Class="overflow-y-auto"
+        MaxHeight="@MaxHeight">
+    @ChildContent
 </MSheet>
 
-@code{
+@code {
+    [Inject]
+    public MasaBlazor? MasaBlazor { get; set; }
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
     [Parameter]
     public string? Id { get; set; }
+    private double MaxHeight => MasaBlazor!.Breakpoint.Height - MasaBlazor.Application.Top - MasaBlazor.Application.Bottom;
 }
