--- a/NoDecentDiary/Shared/ScrollContainer.razor
+++ b/NoDecentDiary/Shared/ScrollContainer.razor
@@ -11,5 +11,5 @@
     public RenderFragment? ChildContent { get; set; }
     [Parameter]
     public string? Id { get; set; }
-    private double MaxHeight => MasaBlazor!.Breakpoint.Height - MasaBlazor.Application.Top - MasaBlazor.Application.Bottom;
+    private double MaxHeight => MasaBlazor!.Breakpoint.Height - MasaBlazor.Application.Top;
 }
