--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@page "/tags"
+@page "/Diaries"
 
 <MAppBar App
          ElevateOnScroll
@@ -35,12 +35,7 @@
                 <h3>早上好，又是全新的一天</h3>
             </div>
 
-            <DiaryCardList Value="Diaries">
-
-            </DiaryCardList>
-
-            <div class="py-10">
-            </div>
+            <DiaryCardList Value="Diaries"></DiaryCardList>
         </SwiperTabItem>
         <SwiperTabItem>
             <div class="d-flex justify-space-between flex-wrap">
