--- a/NoDecentDiary/Shared/DiaryCardList.razor
+++ b/NoDecentDiary/Shared/DiaryCardList.razor
@@ -23,6 +23,15 @@
     }
 }
 
+@if(!Value.Any())
+{
+    <div class=" d-flex justify-center" style="padding-top:20vh;">
+        <div class="text-h6 text--secondary font-weight-bold-table">
+            暂无日记
+        </div>
+    </div>
+}
+
 <SelectTags @bind-Value="showSelectTag"
             @bind-Values="SelectedTags"
             OnSave="HandOnSaveSelectTags">
