feat(DiaryCardList) : update layout style

--- a/NoDecentDiary/Shared/DiaryCard.razor
+++ b/NoDecentDiary/Shared/DiaryCard.razor
@@ -1,6 +1,6 @@
 ﻿<MCard Elevation="5"
        Rounded="@("lg")"
-       Class="my-5"
+       Class="@("my-5 " + Class)"
        @oncontextmenu="()=>showMenu=true"
        __internal_preventDefault_oncontextmenu>
     <MListItem Dense>
