feat(PageSearch) : add PageSearch

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -19,7 +19,7 @@
         </MTab>
     </MTabs>
     <MSpacer></MSpacer>
-    <MButton Large Icon>
+    <MButton Large Icon Href="/Search">
         <MIcon>mdi-magnify</MIcon>
     </MButton>
 </MAppBar>
