feat() : add Autofocus and fix swiper lag

--- a/NoDecentDiary/Pages/PageSearch.razor
+++ b/NoDecentDiary/Pages/PageSearch.razor
@@ -13,6 +13,7 @@
                     Value="_search"
                     ValueChanged="HandOnTextChanged"
                     Solo
+                    Autofocus
                     Clearable
                     Placeholder="请输入日记关键词"
                     HideDetails="@("auto")">
