feat(INavigateToBack) : add INavigateToBack and update navigation

--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -19,7 +19,7 @@
         </MTab>
     </MTabs>
     <MSpacer></MSpacer>
-    <MButton Large Icon Href="/Search">
+    <MButton Large Icon OnClick="NavigateToSearch">
         <MIcon>mdi-magnify</MIcon>
     </MButton>
 </MAppBar>
