--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -66,14 +66,14 @@
 
 <ScrollContainer Id="scrolling-write">
     <MContainer>
-        <div class="px-3 text-sm-h6 font-weight-bold">
+        <div class="px-3 text-h6 font-weight-bold">
             @(DateTime.Now.ToString("yyyy/MM/dd"))
         </div>
 
         <div class="overflow-hidden" style="max-width:100px;">
             <MAutocomplete Solo
                            Dense
-                           Label="天气"
+                           Placeholder="天气"
                            Color="transparent"
                            HideDetails="@("auto")"
                            Items="_weathers"
@@ -85,7 +85,7 @@
 
         @if (showTitle)
         {
-            <div class="my-sm-4 write-overflow">
+            <div class="my-sm-4 overflow-hidden-mobile user-select">
                 <MTextField @bind-Value="_diary.Title"
                         Solo="!IsDesktop"
                         Outlined="IsDesktop"
@@ -99,7 +99,7 @@
             </div>
         }
 
-        <div class="my-sm-4 write-overflow">
+        <div class="my-sm-4 overflow-hidden-mobile user-select">
             <MTextarea @bind-Value="_diary.Content"
                        Solo="!IsDesktop"
                        Outlined="IsDesktop"
