--- a/NoDecentDiary/Shared/DiaryCard.razor
+++ b/NoDecentDiary/Shared/DiaryCard.razor
@@ -1,6 +1,8 @@
-﻿<MCard Elevation="5"
+﻿<MCard Elevation="4"
        Rounded="@("lg")"
        Class="@("my-5 " + Class)"
+       OnClick="OnClick"
+       Ripple="false"
        @oncontextmenu="()=>showMenu=true"
        __internal_preventDefault_oncontextmenu>
     <MListItem Dense>
@@ -16,56 +18,59 @@
                     mdi-format-vertical-align-top
                 </MIcon>
             }
-            <MMenu @bind-Value="showMenu"
-                   Bottom
-                   Left
-                   Rounded="@("lg")"
-                   Transition="scroll-x-reverse-transition">
-                <ActivatorContent>
-                    <MButton Icon
-                             @attributes="@context.Attrs">
-                        <MIcon>mdi-dots-horizontal</MIcon>
-                    </MButton>
-                </ActivatorContent>
+            <div @onclick:stopPropagation="true">
+                <MMenu @bind-Value="showMenu"
+                       Bottom
+                       Left
+                       Rounded="@("lg")"
+                       Transition="scroll-x-reverse-transition">
+                    <ActivatorContent>
+                        <MButton Icon
+                                 Ripple="false"
+                                 @attributes="@context.Attrs">
+                            <MIcon>mdi-dots-horizontal</MIcon>
+                        </MButton>
+                    </ActivatorContent>
 
-                <ChildContent>
-                    <MList MinWidth="150">
-                        <MListItem Dense
-                                   Ripple="false"
-                                   OnClick="OnTag">
-                            <MListItemContent>
-                                标签
-                            </MListItemContent>
-                        </MListItem>
-                        <MListItem Dense
-                                   Ripple="false"
-                                   OnClick="OnCopy">
-                            <MListItemContent>
-                                复制
-                            </MListItemContent>
-                        </MListItem>
-                        <MListItem Dense
-                                   Ripple="false"
-                                   OnClick="OnDelete">
-                            <MListItemContent>
-                                删除
-                            </MListItemContent>
-                        </MListItem>
-                        <MListItem Dense
-                                   Ripple="false"
-                                   OnClick="OnTopping">
-                            <MListItemContent>
-                                @(Top ? "取消置顶" : "置顶")
-                            </MListItemContent>
-                        </MListItem>
-                        <MListItem Dense Ripple="false">
-                            <MListItemContent>
-                                导出（txt、json、pdf）
-                            </MListItemContent>
-                        </MListItem>
-                    </MList>
-                </ChildContent>
-            </MMenu>
+                    <ChildContent>
+                        <MList MinWidth="150">
+                            <MListItem Dense
+                                       Ripple="false"
+                                       OnClick="OnTag">
+                                <MListItemContent>
+                                    标签
+                                </MListItemContent>
+                            </MListItem>
+                            <MListItem Dense
+                                       Ripple="false"
+                                       OnClick="OnCopy">
+                                <MListItemContent>
+                                    复制
+                                </MListItemContent>
+                            </MListItem>
+                            <MListItem Dense
+                                       Ripple="false"
+                                       OnClick="OnDelete">
+                                <MListItemContent>
+                                    删除
+                                </MListItemContent>
+                            </MListItem>
+                            <MListItem Dense
+                                       Ripple="false"
+                                       OnClick="OnTopping">
+                                <MListItemContent>
+                                    @(Top ? "取消置顶" : "置顶")
+                                </MListItemContent>
+                            </MListItem>
+                            <MListItem Dense Ripple="false">
+                                <MListItemContent>
+                                    导出（txt、json、pdf）
+                                </MListItemContent>
+                            </MListItem>
+                        </MList>
+                    </ChildContent>
+                </MMenu>
+            </div>
         </MListItemAction>
     </MListItem>
     <MDivider Class="mx-4"></MDivider>
