--- a/NoDecentDiary/Shared/DiaryCardList.razor
+++ b/NoDecentDiary/Shared/DiaryCardList.razor
@@ -6,7 +6,7 @@
             <DiaryCard Value="item"
                Class="diary-card"
                OnTag="()=>Tag(item.Id)"
-               OnCopy="()=>Copy(item.Content)"
+               OnCopy="()=>Copy(item)"
                OnDelete="()=>Delete(item)"
                OnTopping="()=>Topping(item)"
                OnClick="()=>HandOnClick(item.Id)">
@@ -20,7 +20,7 @@
             <DiaryCard Value="item"
                Class="diary-card"
                OnTag="()=>Tag(item.Id)"
-               OnCopy="()=>Copy(item.Content)"
+               OnCopy="()=>Copy(item)"
                OnDelete="()=>Delete(item)"
                OnTopping="()=>Topping(item)"
                OnClick="()=>HandOnClick(item.Id)">
