refactor : add INavigateService and update navigation

--- a/NoDecentDiary/Pages/PageRead.razor
+++ b/NoDecentDiary/Pages/PageRead.razor
@@ -113,6 +113,7 @@
                        Solo="!IsDesktop"
                        Outlined="IsDesktop"
                        HideDetails="@("auto")"
+                       Readonly
                        AutoGrow
                        Rows="8"
                        RowHeight="30">
