--- a/NoDecentDiary/Shared/SwiperTabItems.razor
+++ b/NoDecentDiary/Shared/SwiperTabItems.razor
@@ -3,5 +3,8 @@
         @ChildContent
     </div>
 </div>
-
+<div class="d-flex justify-center" style="@($"padding-top:30vh;{(Show?"display:none;":"")}")">
+    <MProgressCircular Indeterminate
+                       Size="48"></MProgressCircular>
+</div>
 <link href="css/swiper-bundle.min.css" rel="stylesheet" />
